--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Workshop Title"
+title: "How to set up a workshop page"
 
 
 #------------------------------------------------------------
